--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="http://www.czechabroad.com/" />
+            <iframe width="100%" height="100%" frameborder="0" src="https://spanishsabores.com/expat-blog-spain/" />
         </div>
     </body>
 </html>
